hw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-cloud
  namespace: demo
  labels:
    app: hw-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw-cloud
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hw-cloud
    spec:
      containers:
      - name: hw-cloud
        image: docker.io/library/hw-cloud:v1.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 20m
            memory: 100Mi
