hw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-cloud
  namespace: demo
spec:
  selector:
    app: hw-cloud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
