hw-ingress.yaml
---
#Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-cloud
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: hw-cloud
    cert-manager.io/issuer-kind: Issuer
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"   
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: demo.cetc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-cloud
            port:
              number: 80
  tls:
  - hosts:
    - demo.cetc.com
    secretName: hw-cloud
